# inklingreader

./: .gitmodules  BEGINNER_SETUP_GUIDE.txt  Makefile.am  README.md  configure.ac
src/: constants.h  main.c
src/datatypes/: inklingOSC.h
src/osc_broadcaster/: osc_broadcaster.c  osc_broadcaster.h
src/usb/: online-mode.c  online-mode.h
